crates/ffs-harness/src/snapshots/ffs_harness__perf_comparison__tests__full_report_mixed_verdicts.snap
---
source: crates/ffs-harness/src/perf_comparison.rs
expression: report
---
Performance Regression Report (comparator v1)
========================================================================
Summary: 1 pass, 1 warn, 1 fail, 1 inconclusive

[PASS] op_pass: +0.0% (d=0.00 negligible, p=N/A) — pass
[WARN] op_warn: +15.0% (d=50.95 large, p<0.001) — WARN
[FAIL] op_fail: +29.9% (d=42.43 large, p=N/A) — envelope says Fail, marking Fail
[INCONCLUSIVE] op_inconclusive: +7.0% (d=9.90 large, p=N/A) — envelope says Ok, marking Inconclusive
