crates/ffs-harness/src/snapshots/ffs_harness__perf_comparison__tests__report_line_fail.snap
---
source: crates/ffs-harness/src/perf_comparison.rs
expression: line
---
[FAIL] op_fail: +29.9% (d=42.43 large, p=N/A) — envelope says Fail, marking Fail
