crates/ffs-harness/src/snapshots/ffs_harness__perf_comparison__tests__report_line_pass.snap
---
source: crates/ffs-harness/src/perf_comparison.rs
expression: line
---
[PASS] op_pass: +0.0% (d=0.00 negligible, p=N/A) — pass
